Now fixed the issue that when the animation played when hovering on "square", it would apply to all the chrildre, including the button (.interested). The fix was to make the z-index of the .interested a big number, 12 for example.

--- a/stylesheets/browse-pets.css
+++ b/stylesheets/browse-pets.css
@@ -39,6 +39,7 @@
     text-decoration: none;
     margin-top: 275px;
     position: absolute;
+    z-index: 12;
 }
 
 .interested:hover {
@@ -51,7 +52,7 @@
     color: #FEFAE0;
 }
 
-.square:hover:not(.interested) {
+.square:hover > .information {
     animation: fadeIn .5s;
 }
 
